fix: svg vertical-align

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -26,5 +26,5 @@ figure {
 }
 
 svg {
-  vertical-align: text-top;
+  vertical-align: middle;
 }
