--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -132,7 +132,6 @@
 
     svg {
       margin-right: spacing(1);
-      vertical-align: middle;
     }
   }
 
