--- a/src/styles/pages/_post.scss
+++ b/src/styles/pages/_post.scss
@@ -111,8 +111,8 @@ body.post {
       word-wrap: break-word;
       transition: box-shadow 0.25s;
 
-      &:hover,
-      &:focus {
+      &:not(.anchor):hover,
+      &:not(.anchor):focus {
         box-shadow: inset 0 -1px 0 color(primary);
       }
     }
@@ -133,7 +133,6 @@ body.post {
         margin-bottom: 0;
       }
     }
-
     // TODO: Wide image / Gallery
     // .gatsby-resp-image-wrapper {
     //   align-items: center;
@@ -162,10 +161,6 @@ body.post {
     justify-content: space-between;
     margin-bottom: spacing(3);
     font-size: font-size(small);
-
-    svg {
-      vertical-align: middle;
-    }
 
     a {
       color: color(accent);
